--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -31,6 +31,14 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'OAGothic-ExtraBold';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2302@1.0/OAGothic-ExtraBold.woff2')
+    format('woff2');
+  font-weight: 800;
+  font-style: normal;
+}
+
 /* ------------------------------------------ */
 
 .home_contact_container,
@@ -225,8 +233,9 @@
 .contact_script_title_box {
   display: flex;
   flex-direction: column;
-  font-family: 'KBO-Dia-Gothic_bold';
-  font-size: 4.5em;
+  /* font-family: 'KBO-Dia-Gothic_bold'; */
+  font-family: 'OAGothic-ExtraBold';
+  font-size: 74px;
 }
 
 .contact_script_title01 {
