--- a/src/components/03work/03work.css
+++ b/src/components/03work/03work.css
@@ -30,6 +30,14 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'GangwonEduPowerExtraBoldA';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/GangwonEduPowerExtraBoldA.woff')
+    format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 /* ------------------------------------------ */
 
 .home_work_container,
@@ -276,7 +284,7 @@
 .work_script_title {
   display: flex;
   flex-direction: row;
-  font-family: 'OAGothic-ExtraBold';
+  font-family: 'GangwonEduPowerExtraBoldA';
   font-size: 40px;
   align-items: center;
   height: 60px;
