--- a/src/components/02skill/02skill.css
+++ b/src/components/02skill/02skill.css
@@ -222,8 +222,8 @@
 .skill_item_title {
   display: flex;
   height: 40px;
-  font-family: 'OAGothic-ExtraBold';
-  font-size: 29px;
+  font-family: 'Tilt Warp';
+  font-size: 34px;
   margin-bottom: 10px;
 }
 
