--- a/src/components/03work/03work.css
+++ b/src/components/03work/03work.css
@@ -284,8 +284,8 @@
 .work_script_title {
   display: flex;
   flex-direction: row;
-  font-family: 'GangwonEduPowerExtraBoldA';
-  font-size: 40px;
+  font-family: 'Tilt Warp';
+  font-size: 45px;
   align-items: center;
   height: 60px;
   border: solid 1px black;
