--- a/src/components/03work/03work.css
+++ b/src/components/03work/03work.css
@@ -406,11 +406,11 @@
     padding-left: 50px;
   }
 
-  .work_image {
+  /* .work_image {
     width: 380px;
   }
 
   .work_image_page {
     width: 380px;
-  }
+  } */
 }
