--- a/src/components/03work/03work.css
+++ b/src/components/03work/03work.css
@@ -233,7 +233,9 @@
   position: relative;
   width: 360px;
   height: 400px;
+  background: black;
   border: solid 1px black;
+  border-radius: 10px;
 }
 
 .work_image_prev,
@@ -247,6 +249,12 @@
   position: absolute;
   border-radius: 10px;
   transition: all 0.2s ease;
+  /* UNABLE DRAG */
+  user-select: none;
+  -ms-user-select: none;
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
 }
 
 .work_image_next {
@@ -268,6 +276,12 @@
   height: 35px;
   /* border: solid 1px black; */
   gap: 10px;
+  /* UNABLE DRAG */
+  user-select: none;
+  -ms-user-select: none;
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
 }
 
 .work_image_page_prev:hover,
@@ -351,6 +365,24 @@
 
 .work_detail_item_content_bold {
   font-weight: bold;
+}
+
+/* ------------------------------------------ */
+
+.banthing00,
+.banthing01,
+.banthing02,
+.banthing03,
+.banthing04,
+.banthing05 {
+  display: flex;
+  width: 100%;
+}
+
+.banthing06 {
+  display: flex;
+  height: 100%;
+  margin: auto;
 }
 
 /* ------------------------------------------ */
