--- a/src/components/03work/03work.css
+++ b/src/components/03work/03work.css
@@ -233,8 +233,8 @@
   position: relative;
   width: 360px;
   height: 400px;
-  background: black;
-  border: solid 1px black;
+  background: white;
+  /* border: solid 1px black; */
   border-radius: 10px;
 }
 
@@ -377,13 +377,15 @@
   display: flex;
   width: 100%;
   animation-name: slides-fade;
-  animation-duration: 1s;
+  animation-duration: 0.5s;
 }
 
 .banthing06 {
   display: flex;
   height: 100%;
   margin: auto;
+  animation-name: slides-fade;
+  animation-duration: 0.5s;
 }
 
 /* ------------------------------------------ */
