--- a/src/components/03work/03work.css
+++ b/src/components/03work/03work.css
@@ -224,7 +224,7 @@ a:hover {
   display: flex;
   flex-direction: row;
   width: 950px;
-  height: 750px;
+  height: 80vh;
   gap: 5px;
   /* background: rgb(240, 240, 240); */
   border-radius: 12px;
@@ -234,6 +234,7 @@ a:hover {
 .work_line_box {
   display: flex;
   width: 100%;
+  height: 10vh;
   justify-content: center;
   align-items: center;
   margin: 5px 0 5px 0;
