--- a/src/components/03work/03work.css
+++ b/src/components/03work/03work.css
@@ -224,7 +224,7 @@ a:hover {
   display: flex;
   flex-direction: row;
   width: 950px;
-  height: 85vh;
+  height: 80vh;
   max-height: 800px;
   gap: 5px;
   /* background: rgb(240, 240, 240); */
@@ -235,6 +235,7 @@ a:hover {
 .work_line_box {
   display: flex;
   width: 100%;
+  height: 5vh;
   justify-content: center;
   align-items: center;
   margin: 5px 0 5px 0;
@@ -563,6 +564,10 @@ a:hover {
     padding-left: 50px;
   }
 
+  .work_image {
+    width: 400px;
+  }
+
   .work_line_box {
     margin: 25px 0 25px 0;
   }
@@ -579,7 +584,15 @@ a:hover {
     padding-left: 170px;
   }
 
+  .work_image {
+    width: 400px;
+  }
+
   .work_line_box {
     margin: 40px 0 40px 0;
+  }
+
+  .work_line_between_item {
+    width: 30%;
   }
 }
