--- a/src/components/01about/01about.css
+++ b/src/components/01about/01about.css
@@ -192,11 +192,50 @@
   /* border: 1px solid black; */
 }
 
+.about_education_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin: 60px 0 60px 0;
+  /* background-color: rgb(189, 189, 189);
+  border: 1px solid black; */
+}
+
+.about_education_title {
+  display: flex;
+  justify-content: flex-start;
+  width: 900px;
+  font-family: 'Tilt Warp';
+  font-size: 40px;
+}
+
+.about_education_box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: auto;
+  gap: 25px;
+  font-family: 'Pretendard-Regular';
+  margin: 30px 0 30px 0;
+  /* background-color: red;
+  border: 1px solid black; */
+}
+
+.about_education_item {
+  display: flex;
+  align-items: center;
+  width: 900px;
+  /* background-color: rgb(94, 94, 94); */
+}
+
 .about_certification_container {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
+  margin: 60px 0 60px 0;
   /* background-color: rgb(189, 189, 189);
   border: 1px solid black; */
 }
@@ -215,9 +254,9 @@
   align-items: center;
   width: 100%;
   height: auto;
-  gap: 10px;
+  gap: 25px;
   font-family: 'Pretendard-Regular';
-  margin: 15px 0 15px 0;
+  margin: 30px 0 30px 0;
   /* background-color: red;
   border: 1px solid black; */
 }
@@ -243,7 +282,7 @@
 
 .about_certification_date {
   display: flex;
-  width: 110px;
+  width: 120px;
   justify-content: flex-end;
 }
 
