--- a/src/components/01about/01about.css
+++ b/src/components/01about/01about.css
@@ -216,7 +216,7 @@
   align-items: center;
   width: 100%;
   height: auto;
-  gap: 25px;
+  gap: 30px;
   font-family: 'Pretendard-Regular';
   margin: 30px 0 30px 0;
   /* background-color: red;
@@ -231,8 +231,12 @@
 }
 
 .about_education_name {
-  width: 250px;
+  width: 260px;
   margin-right: 20px;
+}
+
+.about_education_detail {
+  font-size: 13px;
 }
 
 .about_education_date {
@@ -265,7 +269,7 @@
   align-items: center;
   width: 100%;
   height: auto;
-  gap: 25px;
+  gap: 30px;
   font-family: 'Pretendard-Regular';
   margin: 30px 0 30px 0;
   /* background-color: red;
