--- a/src/components/01about/01about.css
+++ b/src/components/01about/01about.css
@@ -205,7 +205,7 @@
 .about_education_title {
   display: flex;
   justify-content: flex-start;
-  width: 900px;
+  width: 870px;
   font-family: 'Tilt Warp';
   font-size: 40px;
 }
@@ -216,7 +216,7 @@
   align-items: center;
   width: 100%;
   height: auto;
-  gap: 45px;
+  gap: 40px;
   font-family: 'Pretendard-Regular';
   margin: 50px 0 40px 0;
   /* background-color: red;
@@ -226,22 +226,18 @@
 .about_education_item {
   display: flex;
   align-items: center;
-  width: 900px;
+  width: 800px;
   /* background-color: rgb(94, 94, 94); */
 }
 
 .about_education_name {
-  width: 280px;
+  width: 310px;
   margin-right: 20px;
-}
-
-.about_education_detail {
-  font-size: 14px;
 }
 
 .about_education_date {
   display: flex;
-  width: 260px;
+  width: 280px;
   justify-content: flex-end;
 }
 
@@ -258,7 +254,7 @@
 .about_certification_title {
   display: flex;
   justify-content: flex-start;
-  width: 900px;
+  width: 870px;
   font-family: 'Tilt Warp';
   font-size: 40px;
 }
@@ -269,7 +265,7 @@
   align-items: center;
   width: 100%;
   height: auto;
-  gap: 45px;
+  gap: 40px;
   font-family: 'Pretendard-Regular';
   margin: 50px 0 40px 0;
   /* background-color: red;
@@ -279,13 +275,68 @@
 .about_certification_item {
   display: flex;
   align-items: center;
-  width: 900px;
+  width: 800px;
   /* background-color: rgb(94, 94, 94); */
 }
 
 .about_certification_name {
-  width: 250px;
+  width: 270px;
   margin-right: 20px;
+}
+
+.about_certification_date {
+  display: flex;
+  width: 130px;
+  justify-content: flex-end;
+}
+
+.about_other_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin: 60px 0 60px 0;
+  /* background-color: rgb(189, 189, 189);
+  border: 1px solid black; */
+}
+
+.about_other_title {
+  display: flex;
+  justify-content: flex-start;
+  width: 870px;
+  font-family: 'Tilt Warp';
+  font-size: 40px;
+}
+
+.about_other_box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: auto;
+  gap: 40px;
+  font-family: 'Pretendard-Regular';
+  margin: 50px 0 40px 0;
+  /* background-color: red;
+  border: 1px solid black; */
+}
+
+.about_other_item {
+  display: flex;
+  align-items: center;
+  width: 800px;
+  /* background-color: rgb(94, 94, 94); */
+}
+
+.about_other_name {
+  width: 310px;
+  margin-right: 20px;
+}
+
+.about_other_date {
+  display: flex;
+  width: 280px;
+  justify-content: flex-end;
 }
 
 .about_extention_line {
@@ -295,10 +346,8 @@
   border: 0.5px solid rgb(240, 240, 240);
 }
 
-.about_certification_date {
-  display: flex;
-  width: 120px;
-  justify-content: flex-end;
+.about_item_detail {
+  font-size: 14px;
 }
 
 /* ------------------------------------------ */
