--- a/src/components/01about/01about.css
+++ b/src/components/01about/01about.css
@@ -192,6 +192,88 @@
   /* border: 1px solid black; */
 }
 
+/* INTRODUCTION */
+
+.about_introduction_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin: 60px 0 60px 0;
+  /* background-color: rgb(189, 189, 189);
+  border: 1px solid black; */
+}
+
+.about_introduction_title {
+  display: flex;
+  justify-content: flex-start;
+  width: 870px;
+  font-family: 'Tilt Warp';
+  font-size: 45px;
+}
+
+.about_introduction_box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 800px;
+  height: 300px;
+  gap: 40px;
+  font-family: 'Pretendard-Regular';
+  margin: 50px 0 40px 0;
+  background-color: rgb(104, 134, 230);
+  /* border: 1px solid black; */
+}
+
+/* PROFILE */
+
+.about_profile_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin: 60px 0 60px 0;
+  /* background-color: rgb(189, 189, 189);
+  border: 1px solid black; */
+}
+
+.about_profile_title {
+  display: flex;
+  justify-content: flex-start;
+  width: 870px;
+  font-family: 'Tilt Warp';
+  font-size: 45px;
+}
+
+.about_profile_box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: auto;
+  gap: 25px;
+  font-family: 'Pretendard-Regular';
+  margin: 50px 0 40px 0;
+  /* background-color: rgb(104, 134, 230); */
+  /* border: 1px solid black; */
+}
+
+.about_profile_item {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 800px;
+  gap: 80px;
+  /* background-color: rgb(94, 94, 94); */
+}
+
+.about_profile_name {
+  width: 270px;
+  /* background-color: red; */
+}
+
+/* EDUCATION */
+
 .about_education_container {
   display: flex;
   flex-direction: column;
@@ -241,6 +323,8 @@
   justify-content: flex-end;
 }
 
+/* CERTIFICATION */
+
 .about_certification_container {
   display: flex;
   flex-direction: column;
@@ -289,6 +373,8 @@
   width: 130px;
   justify-content: flex-end;
 }
+
+/* OTHER */
 
 .about_other_container {
   display: flex;
