--- a/src/components/01about/01about.css
+++ b/src/components/01about/01about.css
@@ -187,6 +187,7 @@
   animation-duration: 0.75s;
   animation-fill-mode: forwards;
   color: rgb(240, 240, 240);
+  gap: 50px;
   /* color: black; */
   /* background-color: white; */
   /* border: 1px solid black; */
