--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -57,8 +57,8 @@
 
 .profile_image {
   display: flex;
-  width: 12em;
-  border-radius: 100%;
+  width: 200px;
+  border-radius: 50%;
 }
 
 .profile_text_box {
