--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -52,6 +52,7 @@
   display: flex;
   flex-direction: column;
   margin: 0 0 0 2.8em;
+  gap: 5px;
 }
 
 .profile_image_box {
@@ -67,9 +68,9 @@
 .profile_text_box {
   display: flex;
   flex-direction: column;
-  align-items: center;
   margin: 1em 0 1em 0.5em;
   font-family: 'S-CoreDream-3Light';
+  gap: 5px;
 }
 
 .profile_name_kor {
@@ -92,7 +93,7 @@
 }
 
 .profile_break_line {
-  width: 2em;
+  width: 45px;
   margin: 1.5em 0 1.5em 0;
   border-bottom: 1px solid #f9f9f9;
 }
@@ -100,9 +101,7 @@
 .profile_icon_box {
   display: flex;
   align-items: center;
-  justify-content: center;
   gap: 20px;
-  /* width: 7.5em; */
   margin: 1em 0 0 0.5em;
 }
 
