--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -38,9 +38,6 @@
 
 .profile_container {
   display: flex;
-  /*  */
-  justify-content: center;
-  /*  */
   align-items: center;
   width: 17em;
   height: 100vh;
@@ -52,6 +49,7 @@
   display: flex;
   flex-direction: column;
   margin: 0 0 0 2.8em;
+  padding-left: 10px;
   gap: 5px;
 }
 
@@ -61,7 +59,7 @@
 
 .profile_image {
   display: flex;
-  width: 200px;
+  width: 190px;
   border-radius: 50%;
 }
 
