--- a/src/components/01about/01about.css
+++ b/src/components/01about/01about.css
@@ -57,7 +57,7 @@
 }
 
 .home_about_container:hover .home_about_title {
-  font-size: 2.1em;
+  font-size: 30px;
   transition: all 0.1s ease-in-out;
 }
 
@@ -158,7 +158,7 @@
 }
 
 .home_about_title {
-  font-size: 1.8em;
+  font-size: 27px;
   font-family: 'LeferiPoint-BlackA';
   transition: all 0.1s ease-in-out;
 }
