--- a/src/components/02skill/02skill.css
+++ b/src/components/02skill/02skill.css
@@ -47,7 +47,7 @@
 }
 
 .home_skill_container:hover .home_skill_title {
-  font-size: 2.1em;
+  font-size: 30px;
   transition: all 0.1s ease-in-out;
 }
 
@@ -148,7 +148,7 @@
 }
 
 .home_skill_title {
-  font-size: 1.8em;
+  font-size: 27px;
   font-family: 'LeferiPoint-BlackA';
   transition: all 0.1s ease-in-out;
 }
