--- a/src/components/03work/03work.css
+++ b/src/components/03work/03work.css
@@ -79,7 +79,7 @@ a:hover {
 }
 
 .home_work_container:hover .home_work_title {
-  font-size: 2.1em;
+  font-size: 30px;
   transition: all 0.1s ease-in-out;
 }
 
@@ -180,7 +180,7 @@ a:hover {
 }
 
 .home_work_title {
-  font-size: 1.8em;
+  font-size: 27px;
   font-family: 'LeferiPoint-BlackA';
   transition: all 0.1s ease-in-out;
 }
