--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -73,7 +73,7 @@
 }
 
 .home_contact_container:hover .home_contact_title {
-  font-size: 2.1em;
+  font-size: 30px;
   transition: all 0.1s ease-in-out;
 }
 
@@ -174,7 +174,7 @@
 }
 
 .home_contact_title {
-  font-size: 1.8em;
+  font-size: 27px;
   font-family: 'LeferiPoint-BlackA';
   transition: all 0.1s ease-in-out;
 }
