--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -20,7 +20,7 @@
 
 .profile_title {
   display: flex;
-  position: absolute;
+  position: fixed;
   width: 9.5em;
   height: 3.5em;
   align-items: center;
